tests/negative/class/class_private_method_access.tx
// EXPECTED: COMPILE_ERROR
// Description: Private methods cannot be called from outside the declaring class.

class SecretBox {
    private code(): int {
        return 1234;
    }
}

function main() {
    let box = new SecretBox();
    print(box.code());
}
